--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.6",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
