--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://smartbracket1:vIzcbLoSPCGs3I4M@cluster0.vtobwlx.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB=shop
 NEXT_PUBLIC_URL=http://localhost:3000
+NEXTAUTH_SECRET=V1Vpqo6Gcnx7w1m4hC7hdPtVOJ2gG+Td7iozkxGcIaQ=
