--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://smartbracket1:vIzcbLoSPCGs3I4M@cluster0.vtobwlx.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB=shop
 NEXT_PUBLIC_URL=https://$NEXT_PUBLIC_VERCEL_URL
+NEXTAUTH_SECRET=Ips3slxaM2lEiKjasggQIv01PWaQNLMg5jUpGSVcOgI=
