--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.0.6",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-cookie": "^7.0.2",
