--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.6",
     "mongodb": "^6.3.0",
@@ -20,7 +21,8 @@
     "react-cookie": "^7.0.2",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^20",
