--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://smartbracket1:vIzcbLoSPCGs3I4M@cluster0.vtobwlx.mongodb.net/?retryWrites=true&w=majority
-MONGODB_DB=shop
+MONGODB_DB=vidar_prod
 NEXT_PUBLIC_URL=https://$NEXT_PUBLIC_VERCEL_URL
 NEXTAUTH_SECRET=Ips3slxaM2lEiKjasggQIv01PWaQNLMg5jUpGSVcOgI=
